services/helloapp/0.0.1/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-stripprefixes
  namespace: kommander-flux
spec:
  stripPrefix:
    prefixes:
    - /test
