services/helloapp/0.0.1/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: test
  name: test
  namespace: default
spec:
  ports:
  - port: 80
  selector:
    app: test
